External/Releases/A/6-100/V2024.04.12/Body/OldVersions/README_V1.md

***

# 4 year anniversary update (Beta 22, 2024, Friday, April 12th)

**Tag:** `V2024.04.12`

**Released on:** `2024, Friday, April 12th at 03:45 pm PST`

***Pre-release***

This is the 22nd version of the 4 year anniversary update beta. The full release will be created on 2024, Saturday, May 25th. This is the twentieth beta release to be tagged. In the future, I plan to tag the first 3 betas, I just don't know how to right now. These updates should continue daily for a while.

| 📣️ Feedback 💬️ |
|---|
| [`Give feedback on Mastodon`](https://techhub.social/deck/@seanpm2001/112237731368032617) |
| [:octocat: `Give feedback on GitHub`](https://github.com/seanpm2001/seanpm2001/discussions/93/) |

---

## What's Changed (manually written by @seanpm2001)

- **Archives:**
- - Archived data for release 21
- - Archived data for discussion 92
- - Archived files related to the 22nd remodel
- **README:**
- - Updated README to version 96 (beta 22)
- **New media:**
- - No new media files
- **Segments:**
- - New `What I am currently working on` segment
- **Other:**
- - No other changes

***
