External/Releases/A/6-100/V2024.04.14/Body/OldVersions/README_V1.md
***

# 4 year anniversary update (Beta 24, 2024, Sunday, April 14th)

**Tag:** `V2024.04.14`

**Released on:** `2024, Saturday, April 13th at 10:39 pm PST`

***Pre-release***

This is the 24th version of the 4 year anniversary update beta. The full release will be created on 2024, Saturday, May 25th. This is the twenty-second beta release to be tagged. In the future, I plan to tag the first 3 betas, I just don't know how to right now. These updates should continue daily for a while.

Todays update came very late again, and not much was accomplished, similar to yesterdays update. I didn't have as much time for the project due to a lot of distracted downtime today.

A new vCard is included in this update.

| 📣️ Feedback 💬️ |
|---|
| [`Give feedback on Mastodon`](https://techhub.social/deck/@seanpm2001/112237731368032617) |
| [:octocat: `Give feedback on GitHub`](https://github.com/seanpm2001/seanpm2001/discussions/95/) |

---

## What's Changed (manually written by @seanpm2001)

- **Archives:**
- - Archived data for release 23
- - Archived data for discussion 94
- - Archived files related to the 24th remodel
- - No other archived file changes
- **README:**
- - Updated README to version 98 (beta 24)
- - No other updates to the main README file
- **New media:**
- - New vCard and VCF files
- - No other new media files
- **Segments:**
- - No new segment data
- **Other:**
- - No other changes

***
